inyokaedit (0.2.0~ppa1) oneiric; urgency=low

  * Fixed bug #924525 (Improve table template)

  * Fixed bug #925013 (Dates with/without leading 0)

 -- Thorsten Roth <elthoro@gmx.de>  Mon, 01 Feb 2012 19:55:12 +0200

inyokaedit (0.1.0~ppa1) lucid; urgency=low

  * Separated link parser into CParseLinks

  * Fixed bug #826344 (Some signs break link syntax) and #883811

  * Separated file functions into CFileOperations

  * Separated download functions into CDownload

  * Cleaned up parser

  * Fixes for running InyokaEdit under Windows

 -- Thorsten Roth <elthoro@gmx.de>  Sun, 29 Jan 2012 17:47:54 +0200

inyokaedit (0.0.9~ppa3) lucid; urgency=low

  * Version count up to ppa3 because of Launchpad problem...

 -- Thorsten Roth <elthoro@gmx.de>  Thu, 29 Dec 2011 19:41:23 +0200

inyokaedit (0.0.9~ppa2) lucid; urgency=low

  * Changed Qt dependencies and added Qt packages for Lucid.

 -- Thorsten Roth <elthoro@gmx.de>  Wed, 28 Dec 2011 23:12:11 +0200

inyokaedit (0.0.9~ppa1) lucid; urgency=low

  * Added hunspell-based spell checker

  * Separated gui definition from CInyokaEdit.cpp into CInyokaEdit.ui

  * Added ifdefs for debugging and not packaged installations

 -- Thorsten Roth <elthoro@gmx.de>  Mon, 26 Dec 2011 00:27:53 +0200

inyokaedit (0.0.8~ppa1) oneiric; urgency=low

  * Translated all GUI strings into english, added german translation

  * Added combobox for text format

  * Possibility to hide statusbar

  * Added interwiki links

 -- Thorsten Roth <elthoro@gmx.de>  Sun, 27 Nov 2011 22:50:12 +0200

inyokaedit (0.0.7~ppa1) oneiric; urgency=low

  * Open recent files menu entry

  * Updated man file

  * Made clumsy code completion working again

 -- Thorsten Roth <elthoro@gmx.de>  Sat, 12 Nov 2011 22:37:49 +0200

inyokaedit (0.0.6~ppa1) natty; urgency=low

  * Importing interwiki links via xml file in menu and parser

  * Cleand up source code...

  * Added font size to settings

  * Separated settings in own module
