@@ -1,8 +1,8 @@
 /**
- * @file CFileOperations.h
- * @author See AUTHORS
+ * \file CFileOperations.h
+ * \author See AUTHORS
  *
- * @section LICENSE
+ * \section LICENSE
  *
  * Copyright (C) 2011-2012 by the respective authors (see AUTHORS)
  *
@@ -21,7 +21,7 @@
  * You should have received a copy of the GNU General Public License
  * along with InyokaEdit.  If not, see <http://www.gnu.org/licenses/>.
  *
- * @section DESCRIPTION
+ * \section DESCRIPTION
  * Class definition for file operations (new, load, save...).
  */
 
@@ -33,6 +33,10 @@
 class CTextEditor;
 class CSettings;
 
+/**
+ * \class CFileOperations
+ * \brief File handling (open, load, save, etc.)
+ */
 class CFileOperations : public QObject
 {
     Q_OBJECT
