@@ -1,8 +1,8 @@
 /**
- * @file CHighlighter.h
- * @author See AUTHORS
+ * \file CHighlighter.h
+ * \author See AUTHORS
  *
- * @section LICENSE
+ * \section LICENSE
  *
  * Copyright (C) 2011-2012 by the respective authors (see AUTHORS)
  *
@@ -21,7 +21,7 @@
  * You should have received a copy of the GNU General Public License
  * along with InyokaEdit.  If not, see <http://www.gnu.org/licenses/>.
  *
- * @section DESCRIPTION
+ * \section DESCRIPTION
  * Class definition for syntax highlighting.
  */
 
@@ -35,6 +35,10 @@
 // Qt classes
 class QTextDocument;
 
+/**
+ * \class CHighlighter
+ * \brief Syntax highlighting
+ */
 class CHighlighter : public QSyntaxHighlighter
 {
     Q_OBJECT
