@@ -1,8 +1,8 @@
 /**
- * @file CInsertSyntaxElement.h
- * @author See AUTHORS
+ * \file CInsertSyntaxElement.h
+ * \author See AUTHORS
  *
- * @section LICENSE
+ * \section LICENSE
  *
  * Copyright (C) 2011-2012 by the respective authors (see AUTHORS)
  *
@@ -21,7 +21,7 @@
  * You should have received a copy of the GNU General Public License
  * along with InyokaEdit.  If not, see <http://www.gnu.org/licenses/>.
  *
- * @section DESCRIPTION
+ * \section DESCRIPTION
  * Class definition for inserting Inyoka elements.
  */
 
@@ -30,6 +30,10 @@
 
 #include <string>
 
+/**
+ * \class CInsertSyntaxElement
+ * \brief Delivering html code of Inyoka elements
+ */
 class CInsertSyntaxElement
 {
 public:
