@@ -1,8 +1,8 @@
 /**
- * @file CInyokaEdit.cpp
- * @author See AUTHORS
+ * \file CInyokaEdit.cpp
+ * \author See AUTHORS
  *
- * @section LICENSE
+ * \section LICENSE
  *
  * Copyright (C) 2011-2012 by the respective authors (see AUTHORS)
  *
@@ -21,11 +21,11 @@
  * You should have received a copy of the GNU General Public License
  * along with InyokaEdit.  If not, see <http://www.gnu.org/licenses/>.
  *
- * @section DESCRIPTION
+ * \section DESCRIPTION
  * Main application generation (gui, object creation etc.).
  */
 
-#define sVERSION "0.1.0"
+#define sVERSION "0.2.0"
 
 #include <QtGui>
 #include <QtWebKit/QWebView>
@@ -173,6 +173,9 @@ void CInyokaEdit::createObjects()
         myParser = new CParser(myEditor->document(), mySettings->getInyokaUrl(), m_StylesAndImagesDir, m_tmpPreviewImgDir, myInterWikiLinks->getInterwikiLinks(), myInterWikiLinks->getInterwikiLinksUrls());
         if ( m_bLogging ) { std::clog << "Created myParser" << std::endl; }
 
+        /**
+         * \todo Add tabs for editing multiple documents.
+         */
         //myTabwidgetDocuments = new QTabWidget;
         //if ( m_bLogging ) { std::clog << "Created myTabwidgetDocuments" << std::endl; }
         myTabwidgetRawPreview = new QTabWidget;
@@ -1126,7 +1129,7 @@ void CInyokaEdit::about()
     QMessageBox::about(this, tr("About %1", "About dialog <sAppName>").arg( m_pApp->applicationName() ),
                        tr("<b>%1</b> - Editor for Inyoka-based portals<br />"
                           "Version: %2<br /><br />"
-                          "&copy; 2011, the %3 authors<br />"
+                          "&copy; 2011-2012, the %3 authors<br />"
                           "Licence: <a href=\"http://www.gnu.org/licenses/gpl-3.0.html\">GNU General Public License Version 3</a><br /><br />"
                           "This application uses icons from <a href=\"http://tango.freedesktop.org\">Tango project</a>.", "About dialog text, <sAppName>, <sVERSION>, <sAppName>").arg(m_pApp->applicationName()).arg(sVERSION).arg(m_pApp->applicationName()));
 }
