@@ -1,8 +1,8 @@
 /**
- * @file CProgressDialog.h
- * @author See AUTHORS
+ * \file CProgressDialog.h
+ * \author See AUTHORS
  *
- * @section LICENSE
+ * \section LICENSE
  *
  * Copyright (C) 2011-2012 by the respective authors (see AUTHORS)
  *
@@ -21,7 +21,7 @@
  * You should have received a copy of the GNU General Public License
  * along with InyokaEdit.  If not, see <http://www.gnu.org/licenses/>.
  *
- * @section DESCRIPTION
+ * \section DESCRIPTION
  * Class definition of download progress dialog.
  */
 
@@ -41,6 +41,10 @@ namespace Ui {
 
 class QCloseEvent;
 
+/**
+ * \class CProgressDialog
+ * \brief Showing a progress dialog while downloading styles or article images.
+ */
 class CProgressDialog : public QDialog
 {
     Q_OBJECT
