@@ -1,8 +1,8 @@
 /**
- * @file CSettings.h
- * @author See AUTHORS
+ * \file CSettings.h
+ * \author See AUTHORS
  *
- * @section LICENSE
+ * \section LICENSE
  *
  * Copyright (C) 2011-2012 by the respective authors (see AUTHORS)
  *
@@ -21,7 +21,7 @@
  * You should have received a copy of the GNU General Public License
  * along with InyokaEdit.  If not, see <http://www.gnu.org/licenses/>.
  *
- * @section DESCRIPTION
+ * \section DESCRIPTION
  * Class definition for reading and writing settings.
  */
 
@@ -38,7 +38,11 @@
 #include "qtfindreplacedialog/finddialog.h"
 #include "qtfindreplacedialog/findreplacedialog.h"
 
-
+/**
+ * \class CSettings
+ * \brief Load and save settings.
+ * \todo Adding a graphical settings dialog.
+ */
 class CSettings
 {
 
