@@ -1,7 +1,7 @@
 /**
- * @file findform.cpp
+ * \file findform.cpp
  *
- * @section DESCRIPTION
+ * \section DESCRIPTION
  * Copyright (C) 2009  Lorenzo Bettini <http://www.lorenzobettini.it>
  * See COPYING file that comes with this distribution
  */
