@@ -4,7 +4,13 @@ inyokaedit (0.2.0~ppa1) oneiric; urgency=low
 
   * Fixed bug #925013 (Dates with/without leading 0)
 
- -- Thorsten Roth <elthoro@gmx.de>  Mon, 01 Feb 2012 19:55:12 +0200
+  * Started with doxygen documentation and some code cosmetics.
+
+  * Added new GitHub interwiki link.
+
+  * Possibility to remove temp. with articles downloaded images.
+
+ -- Thorsten Roth <elthoro@gmx.de>  Sun, 05 Feb 2012 17:51:12 +0200
 
 inyokaedit (0.1.0~ppa1) lucid; urgency=low
 
